--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ Saya kuliah di <a href="https://www.uin-malang.ac.id//">STAIN Malang (UIN Malang
 								</li>
 								<li class="icon solid fa-phone">(+62) 85852108754</li>
 								<li class="icon solid fa-envelope"><a href="mailto:eny.farika@gmail.com">eny.farika@gmail.com</a></li>
-								<li class="icon brands fa-twitter"><a href="https://twitter.com/enyfarika">@enyfarika</a></li>
+								<li class="icon brands fa-twitter"><a href="https://twitter.com/EnyFarika80">@EnyFarika80</a></li>
 								<li class="icon brands fa-facebook-f"><a href="https://www.facebook.com/enyfarika">facebook.com/enyfarika</a></li>
 								<li class="icon brands fa-instagram"><a href="https://www.instagram.com/enyfarika/">instagram.com/enyfarika</a></li>
 							</ul>
